2008-09-07  Kazuhiro Tanaka  <craqueg@gmail.com>

	* Initial Release
