@@ -1,4 +1,8 @@
-2008-09-07  Kazuhiro Tanaka  <craqueg@gmail.com>
+2008-09-08 (0.1.1)
+  * Add --user and --dir command-line options
+  * Change dbm file from cascket.tch to casket.tch
+  * Successfully build gem on github
 
-	* Initial Release
+2008-09-07 (0.1)
+  * Initial release
 
